--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
 		"lint": "eslint"
 	},
 	"dependencies": {
+		"framer-motion": "^12.34.3",
+		"lucide-react": "^0.575.0",
 		"next": "16.1.1",
 		"react": "19.2.3",
 		"react-dom": "19.2.3",
-		"react-icons": "^5.5.0"
+		"react-icons": "^5.5.0",
+		"react-scroll": "^1.9.3"
 	},
 	"devDependencies": {
 		"@tailwindcss/postcss": "^4",
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
+		"@types/react-scroll": "^1.8.10",
 		"eslint": "^9",
 		"eslint-config-next": "16.1.1",
 		"tailwindcss": "^4",
